--- a/room.css
+++ b/room.css
@@ -345,21 +345,99 @@ nav li {
   background: url('controllers/safety-unactive.png');
 }
 #safety-button-1 {
-  height: 36px;
-  left: 119px;
+  height: 40px;
+  left: 114px;
   position: absolute;
-  top: 131px;
-  width: 84px;
+  top: 129px;
+  width: 94px;
 }
 #safety-button-2 {
-  height: 36px;
-  left: 230px;
+  height: 40px;
+  left: 223px;
   position: absolute;
-  top: 131px;
-  width: 84px;
+  top: 129px;
+  width: 94px;
 }
 #safety-button-1.active, #safety-button-2.active {
   background: url('controllers/safety-active-1-2.png') no-repeat;
+}
+/* Phalanstere Controller */
+#phalanstere-controller {
+  background: url('controllers/phalanstere-unactive.png');
+}
+#phalanstere-button-1 {
+  height: 37px;
+  left: 174px;
+  position: absolute;
+  top: 66px;
+  width: 36px;
+}
+#phalanstere-button-1.active {
+  background: url('controllers/phalanstere-active-1.png') no-repeat;
+}
+#phalanstere-button-2 {
+  height: 36px;
+  left: 219px;
+  position: absolute;
+  top: 65px;
+  width: 38px;
+}
+#phalanstere-button-2.active {
+  background: url('controllers/phalanstere-active-2.png') no-repeat;
+}
+#phalanstere-button-3 {
+  height: 38px;
+  left: 174px;
+  position: absolute;
+  top: 108px;
+  width: 36px;
+}
+#phalanstere-button-3.active {
+  background: url('controllers/phalanstere-active-3.png') no-repeat;
+}
+#phalanstere-button-4 {
+  height: 38px;
+  left: 219px;
+  position: absolute;
+  top: 108px;
+  width: 36px;
+}
+#phalanstere-button-4.active {
+  background: url('controllers/phalanstere-active-4.png') no-repeat;
+}
+#phalanstere-button-5 {
+  height: 48px;
+  left: 107px;
+  position: absolute;
+  top: 127px;
+  width: 49px;
+}
+#phalanstere-button-6 {
+  height: 48px;
+  left: 270px;
+  position: absolute;
+  top: 127px;
+  width: 49px;
+}
+#phalanstere-button-5.active, #phalanstere-button-6.active {
+  background: url('controllers/phalanstere-active-5-6.png') no-repeat;
+}
+#phalanstere-button-7 {
+  height: 21px;
+  left: 60px;
+  position: absolute;
+  top: 227px;
+  width: 127px;
+}
+#phalanstere-button-8 {
+  height: 21px;
+  left: 309px;
+  position: absolute;
+  top: 227px;
+  width: 57px;
+}
+#phalanstere-button-7.active, #phalanstere-button-8.active {
+  background: url('controllers/phalanstere-active-7-8.png') no-repeat;
 }
 /* Close button */
 #x {
